2012-09-22  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppBDTdt.cpp: Rewrite of the initial Date functionality in the
	style of the three recently added classes which simplifies things
	greatly; new class transparently replaces old class 

2012-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* R/zzz.R: Added show() and format() methods for the ptime, du and tz
	modules

2012-09-01  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppBDT.h: Added declarations for two new templated
	converters as<>() and wrap() for the boost::posix_time::ptime class
	* src/RcppBDTpt.cpp (Rcpp): Added implementation for new templated
	converters as<>(), wrap() for the boost::posix_time::ptime class;
	simplified existing code by using them; and added new setter from the
	R Datetime class as well

	* man/bdtDu.Rd: Added manual page for duration class
	* man/bdtPt.Rd: Added manual page for ptime class
	* man/bdtTz.Rd: Added manual page for tzone class

	* demo/RcppBDTtz.R: Added new demo for tzone class

2012-08-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppBDTpt.cpp: getDatetime() now uses struct tm and mktime
	which dels correctly with offsets to UTC

2012-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppBDTpt.cpp: Started module 'bdtPt' with posix time objects

2012-08-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppBDTdu.cpp: New module 'bdtDu' for duration objects which
	can represents hours, minutes, seconds, down to milli, micro and
	nanoseconds (where the last part may be OS-dependent, see Boost docs)

2012-08-24  Dirk Eddelbuettel  <edd@dexter>

	* src/RcppBDTtz.cpp: Use Language evaluation to get location of zone
	db file, reducing constructor to single argument for region; also
	store initial region and added DST start/end time accessors

	* R/zzz.R: add default display methods for bdtTz objects

2012-08-22  Dirk Eddelbuettel  <edd@dexter>

	* src/RcppBDTtz.cpp: Rewrote bdtTz to be based on small class